--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,30 +1,104 @@
 <!DOCTYPE html>
-<html>
-  {% include head.html %}
+<html lang="{{page.language}}">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-language" content="en">
 
-  <body dir="ltr" data-md-color-primary="{{ site.themeColor }}" data-md-color-accent="{{ site.accentColor }}" data-md-color-scheme="default">
-    <script>
-        switch (new URLSearchParams(window.location.search).get("scheme")) {
-            case "dark": document.querySelector("body").dataset.mdColorScheme = "dark"; break;
-            case "light": document.querySelector("body").dataset.mdColorScheme = "light"; break;
-        }
-    </script>
-    {% include navigation.html %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <div class="md-container">
-        <main class="md-main">
-            <div class="md-main__inner md-grid" data-md-component="container">
-            {% include sidebar.html %}
-                <div id="md-container-pancakes">
-                {{ content }}
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <meta name="description"
+          content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    {% if site.author %}
+    <meta name="author" content="{{ site.author }}">
+    {% endif %}
+    <meta name="theme-color" content="{{ site.themeColor }}">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono">
+    <style>body, input {
+        font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif
+    }
+
+    code, kbd, pre {
+        font-family: "Roboto Mono", "Courier New", Courier, monospace
+    }</style>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
+          href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
+    <meta name="lang:clipboard.copy" content="Copy to clipboard">
+    <meta name="lang:clipboard.copied" content="Copied to clipboard">
+    <meta name="lang:search.language" content="en">
+    <meta name="lang:search.pipeline.stopwords" content="True">
+    <meta name="lang:search.pipeline.trimmer" content="True">
+    <meta name="lang:search.result.none" content="No matching documents">
+    <meta name="lang:search.result.one" content="1 matching document">
+    <meta name="lang:search.result.other" content="# matching documents">
+    <meta name="lang:search.tokenizer" content="[\s\-]+">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.png"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/palette.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/overrides.css"/>
+</head>
+<body dir="ltr" data-md-color-primary="{{ site.themeColor }}" data-md-color-accent="{{ site.accentColor }}"
+      data-md-color-scheme="default">
+<script>
+    switch (new URLSearchParams(window.location.search).get("scheme")) {
+        case "dark":
+            document.querySelector("body").dataset.mdColorScheme = "dark";
+            break;
+        case "light":
+            document.querySelector("body").dataset.mdColorScheme = "light";
+            break;
+    }
+</script>
+{% include header.html %}
+
+<div class="md-container" data-md-component="container">
+
+    <!-- Main area -->
+    <main class="md-main" data-md-component="main">
+        <div class="md-main__inner md-grid">
+
+            <!-- Navigation -->
+            <div
+                    class="md-sidebar md-sidebar--primary"
+                    data-md-component="sidebar"
+                    data-md-type="navigation"
+            >
+                <div class="md-sidebar__scrollwrap">
+                    <div class="md-sidebar__inner">
+                        {% include nav.html %}
+                    </div>
                 </div>
             </div>
-        </main>
-    </div>
-    {% include footer.html %}
-    {% include headers.html %}
-    {% include tags.html %}
-    {% include scrolltop.html %}
-    {% include google-analytics.html %}
-  </body>
+
+            <!-- Table of contents -->
+            <div
+                    class="md-sidebar md-sidebar--secondary"
+                    data-md-component="sidebar"
+                    data-md-type="toc"
+            >
+                <div class="md-sidebar__scrollwrap">
+                    <div class="md-sidebar__inner">
+                        {% include toc.html %}
+                    </div>
+                </div>
+            </div>
+
+            <!-- Actual Content -->
+            {{ content }}
+        </div>
+    </main>
+</div>
+{% include footer.html %}
+{% include scripts/initialization.html %}
+{% include scripts/headers.html %}
+{% include scripts/tags.html %}
+{% include scripts/scrolltop.html %}
+{% include scripts/google-analytics.html %}
+</body>
 </html>
