--- a/docs/assets/css/overrides.scss
+++ b/docs/assets/css/overrides.scss
@@ -100,3 +100,33 @@
   border-color: transparent rgba(0, 0, 0, .54);
   content: ""
 }
+
+/* Badges */
+
+span.badge {
+  font-family: "Open Sans", sans-serif;
+  padding: 2px 5px;
+  margin-right: 5px;
+  text-transform: uppercase;
+  font-size: 1.0rem;
+  border-radius: 2px;
+  background: #eee;
+  font-weight: bold; }
+span.badge-primary {
+  background: #3c7dae;
+  color: #fff; }
+span.badge-secondary {
+  background: #999;
+  color: #fff; }
+span.badge-danger {
+  background: firebrick;
+  color: #fff; }
+span.badge-warning {
+  background: darkorange;
+  color: #fff; }
+span.badge-info {
+  background: royalblue;
+  color: #fff; }
+span.badge-success {
+  background: forestgreen;
+  color: #fff; }
