--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -1,6 +1,9 @@
 <nav class="md-nav md-nav--secondary">
-    <label class="md-nav__title" for="__toc">Table of contents</label>
-    <ul id="nav-toc" class="md-nav__list" data-md-scrollfix="">
+    <label class="md-nav__title" for="__toc">
+        <span class="md-nav__icon md-icon"></span>
+        Table of contents
+    </label>
+    <ul id="nav-toc" class="md-nav__list" data-md-component="toc" data-md-scrollfix>
         <!-- toc will be appended here!-->
     </ul>
 </nav>
