--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -39,8 +39,8 @@
     <meta name="lang:search.result.other" content="# matching documents">
     <meta name="lang:search.tokenizer" content="[\s\-]+">
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.png"/>
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css"/>
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/palette.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/mkdocs-material/stylesheets/main.min.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/mkdocs-material/stylesheets/palette.min.css"/>
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/overrides.css"/>
 </head>
 <body dir="ltr" data-md-color-primary="{{ site.themeColor }}" data-md-color-accent="{{ site.accentColor }}"
