--- a/docs/_sass/_slate.scss
+++ b/docs/_sass/_slate.scss
@@ -20,6 +20,28 @@
 /// DEALINGS
 ////
 
+@import "material-color";
+
+///
+/// Strip units from a number
+///
+@function strip-units($number) {
+  @return $number / ($number * 0 + 1);
+}
+
+///
+/// Convert color in HEX to HSL
+///
+/// Note, that we need to strip the `deg` units from the `hue` value, as they
+/// were added in Color Level 4, which not all browsers support.
+///
+@function hex2hsl($color) {
+  @return
+          round(strip-units(hue($color))),
+          round(saturation($color)),
+          round(lightness($color));
+}
+
 // Slate theme, i.e. dark mode
 & {
 
