--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,19 +1,44 @@
+{%comment%}<!--
+  Copyright (c) 2016-2021 Martin Donath <martin.donath@squidfunk.com>
+
+  Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files (the "Software"), to
+  deal in the Software without restriction, including without limitation the
+  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+  sell copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:
+
+  The above copyright notice and this permission notice shall be included in
+  all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
+  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+  IN THE SOFTWARE.
+-->{%endcomment%}
+
+{% assign lang = site.data.languages[page.language] %}
+
+<!-- Footer -->
 <footer class="md-footer">
 
     <!-- Link to previous and/or next page -->
     {% if page.previous.url or page.next.url %}
-    <nav class="md-footer__inner md-grid">
+    <nav class="md-footer__inner md-grid" aria-label="{{ lang['footer.title'] }}">
         <!-- Link to previous page -->
         {% if page.previous.url %}
         <a href="{{ site.baseurl }}{{ page.previous.url }}" title="{{ page.previous.title }}"
            class="md-footer__link md-footer__link--prev" rel="prev">
             <div class="md-footer__button md-icon">
-                <i class="md-icon md-icon--arrow-backward md-footer-nav__button"></i>
+                {% include .icons/material/arrow-left.svg %}
             </div>
             <div class="md-footer__title">
                 <div class="md-ellipsis">
                     <span class="md-footer__direction">
-                      Previous
+                      {{ lang["footer.previous"] }}
                     </span>
                     {{ page.previous.title }}
                 </div>
@@ -23,18 +48,17 @@
 
         <!-- Link to next page -->
         {% if page.next.url %}
-        <a href="{{ site.baseurl }}{{ page.next.url }}" title="{{ page.next.title }}"
-           class="md-footer__link md-footer__link--next" rel="next">
-            <div class="md-footer__button md-icon">
-                <i class="md-icon md-icon--arrow-forward md-footer-nav__button"></i>
-            </div>
+        <a href="{{ site.baseurl }}{{ page.next.url }}" class="md-footer__link md-footer__link--next" rel="next">
             <div class="md-footer__title">
                 <div class="md-ellipsis">
                     <span class="md-footer__direction">
-                        Next
+                        {{ lang["footer.next"] }}
                     </span>
                     {{ page.next.title }}
                 </div>
+            </div>
+            <div class="md-footer__button md-icon">
+                {% include .icons/material/arrow-right.svg %}
             </div>
         </a>
         {% endif %}
@@ -55,7 +79,10 @@
                 {% endif %}
 
                 Made with
-                <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
+                <a
+                        href="https://squidfunk.github.io/mkdocs-material/"
+                        target="_blank" rel="noopener"
+                >
                     Material for MkDocs
                 </a>
                 and
