--- a/docs/_includes/scripts/initialization.html
+++ b/docs/_includes/scripts/initialization.html
@@ -1,20 +1,3 @@
-
-<!--
-  ~ Copyright (C) 2017/2021 e-voyageurs technologies
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
 <script>
     $$tock_search_index = "{{ site.baseurl }}/search/search_index_{{ page.language }}.json"
 </script>
@@ -23,7 +6,7 @@
         "base": "{{site.baseurl}}/{{page.language}}",
         "features": [],
         "translations": {{site.data.languages[page.language] | replace: "=>", ":"}},
-        "search": "{{site.baseurl}}/assets/mkdocs-material/javascripts/workers/search.js",
+        "search": "{{site.baseurl}}/assets/mkdocs-material/javascripts/workers/search.min.js",
         "version": "{{site.version}}"
       }
 </script>
