--- a/docs/_includes/scripts/scheme-toggle.html
+++ b/docs/_includes/scripts/scheme-toggle.html
@@ -1,4 +1,4 @@
-<!--
+{%comment%}<!--
   ~ Copyright (C) 2017/2021 e-voyageurs technologies
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,7 +12,7 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  -->
+  -->{%endcomment%}
 
 <script>
 // this checks whether system dark mode is set
