--- a/docs/_includes/search.html
+++ b/docs/_includes/search.html
@@ -1,13 +1,16 @@
-<!--
+{%comment%}<!--
   Copyright (c) 2016-2021 Martin Donath <martin.donath@squidfunk.com>
+
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to
   deal in the Software without restriction, including without limitation the
   rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
   sell copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
+
   The above copyright notice and this permission notice shall be included in
   all copies or substantial portions of the Software.
+
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
@@ -15,7 +18,9 @@
   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
   FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
   IN THE SOFTWARE.
--->
+-->{%endcomment%}
+
+{% assign lang = site.data.languages[page.language] %}
 
 <div class=md-search data-md-component=search role=dialog>
     <label class=md-search__overlay for=__search></label>
@@ -25,8 +30,8 @@
                     type="text"
                     class="md-search__input"
                     name="query"
-                    aria-label="Search"
-                    placeholder="Search"
+                    aria-label="{{ lang['search.placeholder'] }}"
+                    placeholder="{{ lang['search.placeholder'] }}"
                     autocapitalize="off"
                     autocorrect="off"
                     autocomplete="off"
@@ -42,7 +47,7 @@
             <button
                     type=reset
                     class="md-search__icon md-icon"
-                    data-md-component=reset
+                    aria-label="{{ lang['search.reset'] }}"
                     tabindex=-1
             >
                 {% include .icons/material/close.svg %}
@@ -52,7 +57,7 @@
             <div class="md-search__scrollwrap" data-md-scrollfix>
                 <div class="md-search-result" data-md-component="search-result">
                     <div class=md-search-result__meta>
-                        Type to start searching
+                        {{ lang["search.result.initializer"] }}
                     </div>
                     <ol class=md-search-result__list></ol>
                 </div>
