--- a/docs/_includes/social.html
+++ b/docs/_includes/social.html
@@ -1,11 +1,44 @@
-{% if site.social %}
+{%comment%}<!--
+  Copyright (c) 2016-2021 Martin Donath <martin.donath@squidfunk.com>
+
+  Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files (the "Software"), to
+  deal in the Software without restriction, including without limitation the
+  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+  sell copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:
+
+  The above copyright notice and this permission notice shall be included in
+  all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
+  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+  IN THE SOFTWARE.
+-->{%endcomment%}
+
+<!-- Social links in footer -->
+{% if site.extra.social %}
 <div class="md-footer-social">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <a href="https://github.com/{{ site.social.github }}" target="_blank" class="md-footer-social__link fa fa-github"></a>
-  {% if site.social.twitter %}<a href="https://twitter.com/{{ site.twitter }}" target="_blank" class="md-footer-social__link fa fa-twitter"></a>{% endif %}
-  {% if site.social.linkedin %}<a href="https://linkedin.com/in/{{ site.linkedin }}" target="_blank" class="md-footer-social__link fa fa-linkedin"></a>{% endif %}
-  {% if site.social.dockerhub %}<a href="http://hub.docker.com/r/{{ site.dockerhub }}" class="md-footer-social__link fa" target="_blank">
-  <img src="{{ site.baseurl }}/assets/img/docker-clear.png" style="margin-left:10px" width="20px">
-</a>{% endif %}
+  {% for social in site.extra.social %}
+  {% assign title = social.name %}
+  {% if title == nil and social.link contains "//" %}
+  {% assign url = social.link | split: "//" %}
+  {% assign url = url[0] | split: "/" %}
+  {% assign title = url[0] %}
+  {% endif %}
+  <a
+          href="{{ social.link }}"
+          target="_blank" rel="noopener"
+          title="{{ title | e }}"
+          class="md-footer-social__link"
+  >
+    {% capture icon %}.icons/{{social.icon}}.svg{% endcapture %}
+    {%comment%}{% include {{icon}} %}{%endcomment%}
+  </a>
+  {% endfor %}
 </div>
 {% endif%}
