Add copy code button

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -107,6 +107,7 @@
     </main>
 </div>
 {% include footer.html %}
+{% include scripts/copy.html %}
 {% include scripts/initialization.html %}
 {% include scripts/headers.html %}
 {% include scripts/tags.html %}
