fixes #1244 add tag to allow story exit without checking entities
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/story-tag.component.html
+++ b/bot/admin/web/src/app/bot/story/story-tag.component.html
@@ -15,7 +15,7 @@
   -->
 
 <div class="story-tag">
-  <label class="story-select-label">Triggers:</label>
+  <label class="story-select-label">Tag:</label>
   <nb-select [(ngModel)]="selectedTag"
              (ngModelChange)="selectedTagChange.emit($event)"
              name="storyTag" disableRipple class="story-select">
