--- a/bot/admin/web/src/app/bot/feature/story-runtime-settings.component.html
+++ b/bot/admin/web/src/app/bot/feature/story-runtime-settings.component.html
@@ -68,11 +68,27 @@
           <tock-info-button
             message="Only sub steps entities are checked to decide if the user stays in the same story." position="inline"></tock-info-button>
           <div *ngIf="!checkOnlySubEntitiesForStorySelection || checkOnlySubEntitiesForStorySelection.length < 1">
-            <p>No story tagged in order that only sub steps entities are checked to decide if the user stays in the same
-              story.</p>
+            <p>No story tagged in order that only sub actions entities are checked for action selection (and not the whole tree).</p>
           </div>
           <div *ngIf="checkOnlySubEntitiesForStorySelection && checkOnlySubEntitiesForStorySelection.length > 0">
             <div *ngFor="let story of checkOnlySubEntitiesForStorySelection" class="deactivation-story">
+              <div [nbTooltip]="'Story: ' + story.name">
+                <nb-icon *ngIf="story.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+                <nb-icon *ngIf="story.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+                <nb-icon *ngIf="story.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
+                {{story.name}}
+              </div>
+            </div>
+          </div>
+        </div>
+        <div style="display:flex">
+          <tock-info-button
+            message="Only intents supported by the story are checked for entity action selection." position="inline"></tock-info-button>
+          <div *ngIf="!checkSubEntitiesOnlyWithStoryIntents || checkSubEntitiesOnlyWithStoryIntents.length < 1">
+            <p>No story tagged in order that only intents supported by the story are checked for entity action selection.</p>
+          </div>
+          <div *ngIf="checkSubEntitiesOnlyWithStoryIntents && checkSubEntitiesOnlyWithStoryIntents.length > 0">
+            <div *ngFor="let story of checkSubEntitiesOnlyWithStoryIntents" class="deactivation-story">
               <div [nbTooltip]="'Story: ' + story.name">
                 <nb-icon *ngIf="story.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
                 <nb-icon *ngIf="story.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
