--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -53,6 +53,7 @@
           <mat-form-field>
             <input matInput name="appName" placeholder="New Application Name" [(ngModel)]="application.name"
                    (keyup.enter)="saveApplication()"
+                   [disabled]="!newApplication"
                    matTooltip="Technical name (without special chars)" #appName required autocomplete="off">
           </mat-form-field>
         </p>
