resolves #1271 case insensitive model
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -64,6 +64,10 @@
           </mat-form-field>
         </p>
         <p>
+          <nb-checkbox class="separator" [(ngModel)]="application.caseInsensitive"
+                       nbTooltip="If selected, this option uses case insensitive models">
+            Case insensitive models
+          </nb-checkbox>
           <nb-checkbox class="separator" [(ngModel)]="application.mergeEngineTypes"
                        nbTooltip="If selected, this option uses built-in entity models (like dates) in conjunction with standard NER">
             Use entity models
