resolves #1299 Ignore the trailing punctuation when handling sentences

--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -68,6 +68,10 @@
                        nbTooltip="If selected, this option uses case insensitive models">
             Case insensitive models
           </nb-checkbox>
+          <nb-checkbox class="separator" [(ngModel)]="application.ignoreTrailingPunctuation"
+                       nbTooltip="If selected, this option uses models with no trailing punctuation which are .,:;?! ">
+            Ignore trailing punctuation
+          </nb-checkbox>
           <nb-checkbox class="separator" [(ngModel)]="application.mergeEngineTypes"
                        nbTooltip="If selected, this option uses built-in entity models (like dates) in conjunction with standard NER">
             Use entity models
