--- a/bot/admin/web/src/styles.css
+++ b/bot/admin/web/src/styles.css
@@ -15,7 +15,14 @@
  */
 
 /* You can add global styles to this file, and also import other style files */
+
 @import '~material-design-icons-iconfont/dist/material-design-icons.css';
+
+/* Workaround: icon displayed twice */
+nb-icon.material-icons:before {
+    content: "" !important;
+}
+
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html,
