--- a/bot/admin/web/src/app/faq/train/train-grid-item/train-grid-item.component.html
+++ b/bot/admin/web/src/app/faq/train/train-grid-item/train-grid-item.component.html
@@ -5,7 +5,7 @@
             <div class="tock-divider ml-3"></div>
         </div>
         <div class="col-5 d-flex justify-content-between ">
-            Question quel est le meilleur moyen pour supprimer ma carte?
+           {{sentence}}
         </div>
         <div class="col-3 d-flex justify-content-between align-items-center">
             <div class="tock-divider mr-2"></div>
