--- a/bot/admin/web/src/app/faq/train/train-grid/train-grid.component.html
+++ b/bot/admin/web/src/app/faq/train/train-grid/train-grid.component.html
@@ -1,7 +1,17 @@
-
 <nb-checkbox ngClass="['ml-2','mb-2','mt-4','mr-2','d-flex']">Unknown sentences:</nb-checkbox>
 
-<tock-train-grid-item ngClass="['ml-3','mb-2','mt-2','mr-2']"></tock-train-grid-item>
-<tock-train-grid-item ngClass="['ml-3','mb-2','mt-2','mr-2']"></tock-train-grid-item>
-<tock-train-grid-item ngClass="['ml-3','mb-2','mt-2','mr-2']"></tock-train-grid-item>
-<tock-train-grid-item ngClass="['ml-3','mb-2','mt-2','mr-2']"></tock-train-grid-item>
+<div class="paginator" [nbSpinner]="loading" nbSpinnerStatus="primary" *ngIf="total !== 0">
+    <mat-paginator #paginator class="background"
+                   [length]="total"
+                   [pageIndex]="pageIndex"
+                   [pageSize]="pageSize"
+                   [pageSizeOptions]="[10, 25, 50, 100]">
+    </mat-paginator>
+</div>
+
+<div infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="300"
+    (scrolled)="onScroll()">
+    <div *ngFor="let d of data">
+        <tock-train-grid-item [sentence]="d" ngClass="['ml-3','mb-2','mt-2','mr-2']"></tock-train-grid-item>
+    </div>
+</div>
