--- a/bot/admin/web/src/app/faq/train/train.component.html
+++ b/bot/admin/web/src/app/faq/train/train.component.html
@@ -1,2 +1,3 @@
+<h5 class="h5 mb-4">Qualification bot de FAQ</h5>
 <tock-train-header></tock-train-header>
 <tock-train-grid [filter]="filter"></tock-train-grid>
