--- a/bot/admin/web/src/app/faq/train/train-grid-item/train-grid-item.component.html
+++ b/bot/admin/web/src/app/faq/train/train-grid-item/train-grid-item.component.html
@@ -1,36 +1,55 @@
 <nb-card class="overflow-hidden mb-2">
-    <nb-card-body class="d-flex align-items-center p-2 flex-wrap">
-        <div class="col-1 d-flex justify-content-start">
-            <nb-checkbox ngClass="['mr-2', 'd-flex']"></nb-checkbox>
-            <div class="tock-divider ml-3"></div>
+  <nb-card-body class="d-flex align-items-center p-2 flex-wrap">
+    <div class="col-1 d-flex justify-content-start">
+      <nb-checkbox ngClass="['mr-2', 'd-flex']"></nb-checkbox>
+      <div class="tock-divider ml-3">&nbsp;</div>
+    </div>
+    <div class="col-3 d-flex justify-content-between ">
+      {{sentence.text}}
+    </div>
+    <div class="col-4 d-flex justify-content-between align-items-center">
+      <div class="tock-divider mx-4">&nbsp;</div>
+      FAQ
+      <div class="tock-select-faq input-group mx-4">
+        <nb-select [size]="'small'" placeholder="{{sentence.getIntentLabel(state)}}">
+          <nb-option *ngFor="let intent of intents" value="{{intent.qualifiedName()}}">
+            {{intent.intentLabel()}}
+          </nb-option>
+        </nb-select>
+        <div class="input-group-append ml-1">
+          <button class="tock-btn-addfaq input-group-text tock--subtle-hover">
+            <nb-icon nbPrefix pack="material-icons" icon="add_circle_outline"></nb-icon>
+          </button>
         </div>
-        <div class="col-5 d-flex justify-content-between ">
-           {{sentence}}
-        </div>
-        <div class="col-3 d-flex justify-content-between align-items-center">
-            <div class="tock-divider mr-2"></div>
-            FAQ
-            <nb-select ngClass="['ml-2']" [size]="'small'" placeholder="Résilier carte">
-                <nb-option value="1">
-                    Résilier carte
-                </nb-option>
-                <nb-option value="2">
-                    Supprimer carte
-                </nb-option>
-            </nb-select>
+      </div>
 
-            <nb-icon  ngClass="tock-btn-addfaq" nbPrefix pack="material-icons" icon="add_circle_outline"></nb-icon>
+      <div class="tock-divider ml-2">&nbsp;</div>
+    </div>
+    <div class="col-4 d-flex justify-content-end">
+      <button class="tock-sentence-action tock--subtle-hover tock--success text-muted ml-2"
+              nbButton size="medium" ghost status="secondary">
+        <nb-icon icon="checkmark-circle-2"></nb-icon>
+        Validate
+      </button>
 
-            <div class="tock-divider ml-2"></div>
-        </div>
-        <div class="col-3 d-flex justify-content-end">
-            <button nbButton status="primary" outline size="small" ngClass="mr-2">Validate</button>
-            <button nbButton outline size="small" ngClass="mr-2">Details</button>
+      <button class="tock-sentence-action tock--danger tock--subtle-hover text-muted ml-2"
+              nbButton size="medium" ghost status="secondary">
+        <nb-icon icon="close-circle-outline"></nb-icon>
+        Unknown
+      </button>
 
-            <button ghost status="secondary" size="small" nbButton>
-                <nb-icon nbPrefix pack="material-icons" icon="trash-2-outline"></nb-icon>
-            </button>
+      <button class="tock-sentence-action tock--subtle-hover text-muted ml-2"
+              nbButton size="medium" ghost status="secondary">
+        <nb-icon icon="trash-2-outline"></nb-icon>
+        Delete
+      </button>
 
-        </div>
-    </nb-card-body>
+      <button class="tock-sentence-action tock--subtle-hover text-muted ml-2"
+              nbButton size="medium" ghost status="secondary">
+        <nb-icon icon="message-circle-outline"></nb-icon>
+        Details
+      </button>
+
+    </div>
+  </nb-card-body>
 </nb-card>
