--- a/nlp/admin/web/src/app/try/try.component.html
+++ b/nlp/admin/web/src/app/try/try.component.html
@@ -35,6 +35,8 @@
       >
         GO
       </button>
+
+      <input type='file' (change)="createUploadListener($event)" />
     </div>
 
     &nbsp;
